src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVConservativeRaster_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVConservativeRaster_StringErrorContext.class */
public final class NVConservativeRaster_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glSubpixelPrecisionBiasNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVConservativeRasterErrorContext");
        return methods;
    }
}
